_harp/main.less
@import 'styles/devices.less';

@font-face {
  font-family: 'UbuntuMono-R';
  src: url(fonts/UbuntuMono-R.ttf);
}

@console-bg: #111;
@console-text: #8F8;

body {
  background: @console-bg;
  margin: 0;
}

#console {
  font-family: 'UbuntuMono-R';
  font-size: 300%;
  padding: 1%;
  background: @console-bg;
  color: @console-text;

  display: flex;
  flex-direction: column-reverse;
  position: absolute;
  left: 0%;
  right: 0%;
  top: 0%;
  bottom: 50%;
}

.console-line {
  background: transparent;
  text-align: center;
  padding-top: 20pt;
}

.blue-pill {
    color: #08F;
}

.red-pill {
    color: #F44;
}

